Slider-section overflow fix

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -227,7 +227,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   min-height: 547px;
-  justify-content: space-between;
+  gap: 148px;
   margin-bottom: 149px;
 }
 .about-us-section .section-name {
@@ -296,6 +296,7 @@ img {
   justify-content: space-between;
   min-height: 522px;
   margin-bottom: 177px;
+  overflow: scroll;
 }
 .review-section__slider {
   position: relative;
