--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,7 +65,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     min-height: 547px;
-    justify-content: space-between;
+    gap: 148px;
     margin-bottom: 149px;
 
     .section-name {
@@ -142,6 +142,7 @@ img {
     justify-content: space-between;
     min-height: 522px;
     margin-bottom: 177px;
+    overflow: scroll;
 
     &__slider {
         position: relative;
